--- a/app/src/main/res/layout/activity_a.xml
+++ b/app/src/main/res/layout/activity_a.xml
@@ -2,96 +2,99 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.sidneyseay.sidney2017summer.ActivityA">
 
-    <TextView
-        android:id="@+id/activity_A"
-        android:text="A"
-        android:textSize="55sp"
-        android:gravity="center"
-        android:layout_width="368dp"
-        android:layout_height="551dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp" />
+   <TextView
+       android:id="@+id/activity_A"
+       android:text="A"
+       android:textSize="55sp"
+       android:gravity="center"
+       android:layout_width="368dp"
+       android:layout_height="551dp"
+       tools:layout_editor_absoluteY="8dp"
+       tools:layout_editor_absoluteX="8dp" />
 
-    <LinearLayout
-        android:id="@+id/activity_main_tool_A"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:background="@android:color/white"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true">
+   <LinearLayout
+       android:id="@+id/activity_main_tool_A"
+       android:layout_width="match_parent"
+       android:layout_height="65dp"
+       android:background="@android:color/white"
+       android:orientation="horizontal"
+       android:layout_alignParentBottom="true">
 
-        <TextView
-            android:id="@+id/activity_a_a"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:text="A"
-            android:textColor="@android:color/black"
-            android:textSize="22sp"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center_vertical"
-            android:gravity="center"/>
+      <TextView
+          android:id="@+id/activity_a_a"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:layout_weight="3"
+          android:text="A"
+          android:textColor="@android:color/black"
+          android:textSize="22sp"
+          android:layout_centerInParent="true"
+          android:layout_gravity="center_vertical"
+          android:gravity="center"/>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.05"
-            android:background="@android:color/darker_gray"
-            ></View>
+      <View
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:layout_weight="0.05"
+          android:background="@android:color/darker_gray"
+          ></View>
 
-        <TextView
-            android:id="@+id/activity_a_b"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:text="B"
-            android:textColor="@android:color/black"
-            android:textSize="22sp"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center_vertical"
-            android:gravity="center"/>
+      <TextView
+          android:id="@+id/activity_a_b"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:layout_weight="3"
+          android:text="B"
+          android:textColor="@android:color/black"
+          android:textSize="22sp"
+          android:layout_centerInParent="true"
+          android:layout_gravity="center_vertical"
+          android:gravity="center"/>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.05"
-            android:background="@android:color/darker_gray"
-            ></View>
+      <View
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:layout_weight="0.05"
+          android:background="@android:color/darker_gray"
+          ></View>
 
-        <TextView
-            android:id="@+id/activity_a_c"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:text="C"
-            android:textColor="@android:color/black"
-            android:textSize="22sp"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center_vertical"
-            android:gravity="center"/>
+      <TextView
+          android:id="@+id/activity_a_c"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:layout_weight="3"
+          android:text="C"
+          android:textColor="@android:color/black"
+          android:textSize="22sp"
+          android:layout_centerInParent="true"
+          android:layout_gravity="center_vertical"
+          android:gravity="center"/>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.05"
-            android:background="@android:color/darker_gray"
-            ></View>
+      <View
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:layout_weight="0.05"
+          android:background="@android:color/darker_gray"
+          ></View>
 
-        <TextView
-            android:id="@+id/activity_a_d"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:text="D"
-            android:textColor="@android:color/black"
-            android:textSize="22sp"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center_vertical"
-            android:gravity="center"/>
+      <TextView
+          android:id="@+id/activity_a_d"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:layout_weight="3"
+          android:text="D"
+          android:textColor="@android:color/black"
+          android:textSize="22sp"
+          android:layout_centerInParent="true"
+          android:layout_gravity="center_vertical"
+          android:gravity="center"/>
 
-    </LinearLayout>
+   </LinearLayout>
+
+
 
 </RelativeLayout>
