--- a/app/src/main/res/layout/activity_b.xml
+++ b/app/src/main/res/layout/activity_b.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.example.sidneyseay.sidney2017summer.ActivityB">
+
 
     <TextView
         android:id="@+id/activity_B"
